Colaboratory를 통해 생성됨

--- a/시각화과제_2013408_강윤지.ipynb
+++ b/시각화과제_2013408_강윤지.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNzTHh+Gpv3D8YVegpAMjv",
+      "authorship_tag": "ABX9TyORadz3IqYQFSFWyVvvumXa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,7 @@
         "id": "Np0atovC0waw",
         "outputId": "9250d645-0f08-4a41-b4a4-70f31b763c57"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +89,7 @@
         "id": "kQ1g396H1JPj",
         "outputId": "c015f6be-db43-4f05-dd2d-801dfdc11fc3"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -428,7 +428,7 @@
         "id": "9Wpy7YEUc9Kb",
         "outputId": "0634dc3a-fa67-40b6-f8c3-c14207aa6464"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -820,91 +820,19 @@
       "metadata": {
         "id": "1EPVjMvWhjNZ"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "health['시도코드'].value_counts(sort=True)\n",
-        "# 열의 각 값에 대한 모든 발생 횟수 반환"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qvUXcT0AiyaI",
-        "outputId": "fd6f612c-fd51-43e0-cce6-f3f529120c84"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "경기도         2495\n",
-              "서울시특별시      1644\n",
-              "부산광역시        681\n",
-              "경상남도         663\n",
-              "인천광역시        561\n",
-              "경상북도         523\n",
-              "대구광역시        495\n",
-              "충청남도         430\n",
-              "전라남도         395\n",
-              "전라북도         392\n",
-              "강원도          343\n",
-              "대전광역시        331\n",
-              "충청북도         323\n",
-              "광주광역시        280\n",
-              "울산광역시        244\n",
-              "제주도특별차지도     123\n",
-              "세종특별차시        77\n",
-              "Name: 시도코드, dtype: int64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "health['성별코드'] = health['성별코드'].replace(['M','F'], ['남자', '여자'])"
+        "health['성별코드'] = health['성별코드'].replace(['M','F'], ['남자','여자'])"
       ],
       "metadata": {
         "id": "wskXxbrzkCP1"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "health['성별코드'].value_counts()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7hP7qEL9kHFv",
-        "outputId": "ee908f01-c728-4d99-8f32-24fd6c0e407b"
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "남자    5138\n",
-              "여자    4862\n",
-              "Name: 성별코드, dtype: int64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -914,7 +842,7 @@
       "metadata": {
         "id": "kUuF0UoMkIuk"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -930,7 +858,7 @@
         "id": "Y7i_T3BRqvO2",
         "outputId": "a159b1f6-accd-4620-86a8-4a1c16934df4"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1231,16 +1159,16 @@
       "metadata": {
         "id": "HqboRPUNnPef"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# 필요한 패키지와 라이브러리를 가져옴\n",
-        "import matplotlib as mpl               # 기본설정\n",
-        "import matplotlib.pyplot as plt        # 그래프\n",
-        "import matplotlib.font_manager as fm   # 폰트\n",
+        "import matplotlib as mpl        \n",
+        "import matplotlib.pyplot as plt   \n",
+        "import matplotlib.font_manager as fm\n",
         "\n",
         "# 그래프를 화면 안에 그리기 위한 설정\n",
         "%matplotlib inline\n",
@@ -1259,7 +1187,7 @@
         "id": "cuYQ1xgXnWf0",
         "outputId": "03c24363-73f6-4429-8818-c3eaef092798"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1298,7 +1226,7 @@
       "metadata": {
         "id": "X2WgQuekvhKU"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1339,7 +1267,7 @@
         "id": "4jDP0CsIgRci",
         "outputId": "3ee4d095-16a9-4d44-828c-a3ddc74e3b1e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1404,7 +1332,7 @@
         "id": "pAE_xc-3L-q1",
         "outputId": "7a7adebe-4598-4bda-94f3-2b55270d42c2"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1708,7 +1636,7 @@
         "id": "T6JTftbMUD_B",
         "outputId": "012ec7eb-bd58-45fb-bd01-68313be2a3ae"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1755,7 +1683,7 @@
         "id": "qYMyYDNpJ3fJ",
         "outputId": "29584d86-770e-47bf-82c3-ef11d91f4fd5"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1810,7 +1738,7 @@
         "id": "WKelvn9yZdDH",
         "outputId": "e6f7500f-5175-496e-9247-8bdead5f430c"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1857,7 +1785,7 @@
         "id": "bppgHgm0OLA9",
         "outputId": "c6663951-158d-4486-e1a8-b90602cdf33c"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
