Colaboratory를 통해 생성됨

--- a/시각화과제_2013408_강윤지.ipynb
+++ b/시각화과제_2013408_강윤지.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORadz3IqYQFSFWyVvvumXa",
+      "authorship_tag": "ABX9TyN//A0gxyTzepfMU/Q+9xgN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1720,8 +1720,8 @@
     {
       "cell_type": "code",
       "source": [
-        "blood = health_CHOLE.loc[(health_CHOLE['HDL판정'] == '낮음') ]\n",
-        "x = blood['흡연상태'].value_counts()\n",
+        "smoke = health_CHOLE.loc[(health_CHOLE['HDL판정'] == '낮음') ]\n",
+        "x = smoke['흡연상태'].value_counts()\n",
         "x1 = x.index\n",
         "y = x.values\n",
         "\n",
@@ -1736,9 +1736,9 @@
           "height": 481
         },
         "id": "WKelvn9yZdDH",
-        "outputId": "e6f7500f-5175-496e-9247-8bdead5f430c"
+        "outputId": "de3d1e37-1052-4780-fff3-a2260d28793e"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "display_data",
